# Scrips

./: .gitignore  pyproject.toml
convert_to_mp3/: converter.py
find_image_duplicates/: duplicates_deleter.py  duplicates_list_writer.py  duplicates_size_comparer.py  excel_writer.py  image_duplicates_finder.py  path_validator.py
img_processing/: background_change.py
